<resources>
    <string name="app_name">ChatRT</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo Electronico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_NoPassword">¿No posees una cuenta?</string>
    <string name="tv_Registrar">Registrarme</string>
    <string name="tv_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R.Password">Repita contraseña</string>
    <string name="btn_Registrar">Registrar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>