<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#DFEAF8"
    android:padding="20dp"
    tools:context=".LoginEmailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:src="@drawable/login"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Ingresar"
        android:text="@string/btn_Ingresar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        app:backgroundTint="#186CCC"/>

    <TextView
        android:id="@+id/txt_NoPassword"
        android:text="@string/txt_NoPassword"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_Registrar"
        android:text="@string/tv_Registrar"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#20446F"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>