<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisterEmailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_registro"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:src="@drawable/agregar"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_Nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_Nombres"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_R.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_R.Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Registrar"
        android:text="@string/btn_Registrar"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>